Refactor code structure for improved readability and maintainability

--- a/Version 5 - Main/index.html
+++ b/Version 5 - Main/index.html
@@ -384,24 +384,8 @@
                                         <label for="attachments">Supporting Documents</label>
                                         <div class="file-upload-area" id="file-upload-area">
                                             <i class="fas fa-cloud-upload-alt"></i>
-                                            <p>Drag and drop files here or click to browse<br><small>Max 10MB per file • 0/5 files selected</small></p>
-                                            <input type="file" id="attachments" name="attachments" multiple accept=".pdf,.doc,.docx,.txt,.jpg,.jpeg,.png,.gif">
-                                        </div>
-                                        <div class="file-restrictions">
-                                            <div class="restriction-info">
-                                                <div class="restriction-item">
-                                                    <i class="fas fa-file-alt"></i>
-                                                    <span>Supported: Images (JPG, PNG, GIF), PDF, Word docs, Text files</span>
-                                                </div>
-                                                <div class="restriction-item">
-                                                    <i class="fas fa-weight-hanging"></i>
-                                                    <span>Maximum file size: 10MB</span>
-                                                </div>
-                                                <div class="restriction-item">
-                                                    <i class="fas fa-layer-group"></i>
-                                                    <span>Maximum 5 files per submission</span>
-                                                </div>
-                                            </div>
+                                            <p>Drag and drop files here or click to browse</p>
+                                            <input type="file" id="attachments" name="attachments" multiple accept=".pdf,.doc,.docx,.ppt,.pptx,.jpg,.png">
                                         </div>
                                         <div id="file-list" class="file-list"></div>
                                     </div>
