--- a/Version 5/index.html
+++ b/Version 5/index.html
@@ -424,7 +424,7 @@
                                     <i class="fas fa-save"></i>
                                     Save Draft
                                 </button>
-                                <button type="submit" class="btn btn-primary">
+                                <button type="submit" class="btn btn-primary submit-btn">
                                     <i class="fas fa-paper-plane"></i>
                                     Submit Idea
                                 </button>
