feat: update PCI DSS compliance checker with improved regex patterns and enhanced detection logic

--- a/Version 5/index.html
+++ b/Version 5/index.html
@@ -263,22 +263,6 @@
                     <p class="page-subtitle">Transform your vision into reality by sharing your innovative thinking with our community</p>
                 </div>
 
-                <!-- PCI DSS Compliance Notice -->
-                <div class="security-notice">
-                    <div class="security-notice-icon">
-                        <i class="fas fa-shield-alt"></i>
-                    </div>
-                    <div class="security-notice-content">
-                        <h4><i class="fas fa-lock"></i> Security & Compliance Notice</h4>
-                        <p><strong>PCI DSS Compliance:</strong> Do not enter sensitive information such as credit card numbers, account numbers, CVV codes, Emirates ID, passport numbers, or any other personally identifiable information (PII). The system automatically detects and redacts such data for your protection.</p>
-                        <!-- <div class="security-badges">
-                            <span class="security-badge"><i class="fas fa-check-circle"></i> PCI DSS Protected</span>
-                            <span class="security-badge"><i class="fas fa-check-circle"></i> XSS Protection</span>
-                            <span class="security-badge"><i class="fas fa-check-circle"></i> Data Sanitization</span>
-                        </div> -->
-                    </div>
-                </div>
-
                 <div class="submit-layout">
                     <div class="submit-form-container">
                         <form id="idea-form" class="enhanced-form">
@@ -476,6 +460,25 @@
                             </div>
                         </div>
 
+
+
+                        <!-- Security & Compliance Notice -->
+                        <div class="security-notice">
+                            <!-- <div class="security-notice-icon">
+                                <i class="fas fa-shield-alt"></i>
+                            </div> -->
+                            <div class="security-notice-content">
+                                <h4><i class="fas fa-lock"></i> Security & Compliance Notice</h4>
+                                <p><strong>PCI DSS Compliance:</strong> Do not enter sensitive information such as credit card numbers, account numbers, CVV codes, Emirates ID, passport numbers, or any other personally identifiable information (PII). The system automatically detects and redacts such data for your protection.</p>
+                                <!-- <div class="security-badges">
+                                    <span class="security-badge"><i class="fas fa-check-circle"></i> PCI DSS Protected</span>
+                                    <span class="security-badge"><i class="fas fa-check-circle"></i> XSS Protection</span>
+                                    <span class="security-badge"><i class="fas fa-check-circle"></i> Data Sanitization</span>
+                                </div> -->
+                            </div>
+                        </div>
+
+                        
                         <div class="progress-panel">
                             <h4><i class="fas fa-tasks"></i> Overall Progress</h4>
                             <div class="overall-progress">
@@ -487,6 +490,8 @@
                                 <p>Complete all sections to submit your idea</p>
                             </div>
                         </div>
+
+
                     </div>
                 </div>
             </div>
