feat: Enhance Admin Dashboard with bulk operations, analytics, and local testing support
- Added Chart.js for real-time analytics in index.html
- Introduced ADMIN-ENHANCEMENTS.md detailing new features including bulk operations, advanced filtering, and enhanced UI/UX
- Created LOCAL-TESTING-GUIDE.md for local testing with sample data and SharePoint integration
- Updated QUICK-REFERENCE-UPDATES.md to summarize changes and new file structures
- Implemented sample-data.json with realistic test data for local development
- Refactored admin.js to utilize sp-helpers.js for SharePoint operations, reducing code duplication
- Enhanced data loading strategy to prioritize local JSON data, followed by SharePoint API calls

--- a/Version 5/index.html
+++ b/Version 5/index.html
@@ -615,6 +615,9 @@
         </div>
     </div>
 
+    <!-- Chart.js for Analytics -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    
     <!-- Security Libraries -->
     <script src="pci-dss-checker.js"></script>
     <script src="xss-protection.js"></script>
