feat: Update branding from Innovation Portal to Think Space across admin and onboarding files

--- a/Version 5/admin.html
+++ b/Version 5/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Innovation Portal - Admin Dashboard</title>
+    <title>Think Space - Admin Dashboard</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
                     </svg>
                 </div>
                 <div class="brand-info">
-                    <span class="brand-text">Innovation Portal</span>
+                    <span class="brand-text">Think Space</span>
                     <span class="brand-subtitle">Admin Dashboard</span>
                 </div>
             </div>
@@ -78,8 +78,8 @@
             <div class="admin-container">
                 <div class="dashboard-header">
                     <div class="header-content">
-                        <h1 class="dashboard-title">Innovation Dashboard</h1>
-                        <p class="dashboard-subtitle">Manage and track innovation across the organization</p>
+                        <h1 class="dashboard-title">Think Space Dashboard</h1>
+                        <p class="dashboard-subtitle">Manage and track ideas across the organization</p>
                     </div>
                     <div class="header-actions">
                         <button class="btn btn-secondary" id="export-data">
