--- a/Version 5/index.html
+++ b/Version 5/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Innovation Portal - The Future of Ideas</title>
+    <title>Think Space - The Future of Ideas</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
                         <path d="M12 2l2.2 5.6L20 10l-5.6 2.2L12 18l-2.4-5.8L4 10l5.6-2.4L12 2z" fill="#08101c"/>
                     </svg>
                 </div>
-                <span class="brand-text">Innovation Portal</span>
+                <span class="brand-text">Think Space</span>
             </div>
             <nav class="nav-menu">
                 <button class="nav-btn active" data-view="home">
@@ -100,7 +100,7 @@
                     <div class="hero-visual">
                         <div class="kpi-dashboard">
                             <div class="dashboard-header">
-                                <h3>Innovation Metrics</h3>
+                                <h3>Think Space Metrics</h3>
                                 <div class="quarter-progress">
                                     <div class="progress-info">
                                         <span>Quarter Progress</span>
@@ -202,7 +202,7 @@
                         <!-- Ideas Grid -->
                         <section class="ideas-main">
                             <div class="ideas-header">
-                                <h2>Innovation Ideas</h2>
+                                <h2>Ideas</h2>
                                 <div class="view-controls">
                                     <button class="view-toggle active" data-view="grid">
                                         <i class="fas fa-th"></i>
