feat: Update logo to use Emirates NBD SVG and enhance visual theme handling

--- a/Version 5/index.html
+++ b/Version 5/index.html
@@ -18,9 +18,7 @@
         <div class="nav-container">
             <div class="nav-brand">
                 <div class="logo">
-                    <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M12 2l2.2 5.6L20 10l-5.6 2.2L12 18l-2.4-5.8L4 10l5.6-2.4L12 2z" fill="#08101c"/>
-                    </svg>
+                    <img src="enbd-logo.svg" alt="Emirates NBD logo" class="logo-image" />
                 </div>
                 <span class="brand-text">Think Space</span>
             </div>
