feat: Update test plan with SharePoint permissions checks and enhance welcome page animations

--- a/Version 5/welcome.html
+++ b/Version 5/welcome.html
@@ -82,9 +82,12 @@
 
       // CTA + keyboard enter
       const btn = document.getElementById('enter-btn');
+      const CTA_DELAY = 480;
       const go = () => {
+        btn.classList.remove('enter-anim');
+        void btn.offsetWidth;
         btn.classList.add('enter-anim');
-        setTimeout(() => { window.location.href = btn.getAttribute('href'); }, 220);
+        setTimeout(() => { window.location.href = btn.getAttribute('href'); }, CTA_DELAY);
       };
       document.addEventListener('keydown', (e) => { if (e.key === 'Enter') go(); });
       btn.addEventListener('click', (e) => { e.preventDefault(); go(); });
